# failiverCheck-AsyncService

./: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  run.bat
app/: __init__.py  config.py  routers.py  schema.py  service.py
tests/: test_calc.py
